--- a/src/app/auth/pages/sign-in-page/sign-in-page.component.html
+++ b/src/app/auth/pages/sign-in-page/sign-in-page.component.html
@@ -2,21 +2,18 @@
 <app-notification (confirm)="onErrorConfirm()"></app-notification>
 <form #ngForm="ngForm" [formGroup]="signInForm" (ngSubmit)="onSubmit()">
   <h2>Login</h2>
-
   <mat-form-field appearance="fill">
     <mat-label>Login</mat-label>
-    <input type="text" matInput formControlName="login" />
+    <input type="text" matInput formControlName="login">
     <mat-error *ngIf="login?.hasError('required')">Login is <strong>required</strong></mat-error>
   </mat-form-field>
-
   <mat-form-field appearance="fill">
     <mat-label>Password</mat-label>
-    <input type="password" matInput formControlName="password" />
+    <input type="password" matInput formControlName="password">
     <mat-error *ngIf="password?.hasError('required')">
       Password is <strong>required</strong>
     </mat-error>
   </mat-form-field>
-
   <button mat-stroked-button type="submit" [disabled]="ngForm.invalid || isSubmitting">
     Login
   </button>
