--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<footer>
+  <mat-toolbar class="footer" color="primary">
+    <div class="footer__authors">
+      <a href="https://github.com/gapeev" class="footer__authors__link">gapeev</a>
+      <a href="https://github.com/Anesthesia92" class="footer__authors__link">Anesthesia92</a>
+      <a href="https://github.com/Valeria310" class="footer__authors__link">Valeria310</a>
+    </div>
+    <span class="footer__year">2022</span>
+    <a href="https://rs.school/angular/" class="footer__logo"></a>
+  </mat-toolbar>
+</footer>
