--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<header>
+  <mat-toolbar color="primary" class="header">
+    <span class="logo">PMA</span>
+    <button mat-raised-button>create new board</button>
+    <button mat-raised-button>logout</button>
+    <button mat-raised-button>edit profile</button>
+    <mat-slide-toggle [(ngModel)]="isLangToggle">{{ getLang() }}</mat-slide-toggle>
+  </mat-toolbar>
+</header>
