feat: make header sticky

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <mat-toolbar color="primary" class="header">
+  <mat-toolbar color="primary" [ngClass]="headerClassList">
     <span class="logo">PMA</span>
     <button mat-raised-button>create new board</button>
     <button mat-raised-button>logout</button>
