--- a/src/app/board/components/board-main/board-main.component.html
+++ b/src/app/board/components/board-main/board-main.component.html
@@ -1,1 +1,15 @@
-<p>board-main works!</p>
+<div class="board">
+  <div class="board-container">
+    <button mat-raised-button>Add task</button>
+    <mat-card class="example-card">
+      <mat-card-title>Hi</mat-card-title>
+      <mat-card-content>
+        <p>This card</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
