--- a/src/app/board/components/task/task.component.html
+++ b/src/app/board/components/task/task.component.html
@@ -1,1 +1,10 @@
-<p>task works!</p>
+<mat-card class="example-card">
+  <mat-card-title>Hi</mat-card-title>
+  <mat-card-content>
+    <p>This card</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+</mat-card>
