--- a/src/app/core/pages/welcome-page/welcome-page.component.html
+++ b/src/app/core/pages/welcome-page/welcome-page.component.html
@@ -1,3 +1,7 @@
 <p>welcome-page works!</p>
-<button mat-stroked-button *ngIf="isUserAuth | async" (click)="signOut()">Logout</button>
-<button mat-stroked-button *ngIf="isUserAuth | async" (click)="deleteUser()">Delete</button>
+<button mat-stroked-button *ngIf="isUserAuth | async" (click)="signOut()">
+  {{ 'WELCOME-PAGE.LOGOUT' | translate }}
+</button>
+<button mat-stroked-button *ngIf="isUserAuth | async" (click)="deleteUser()">
+  {{ 'WELCOME-PAGE.DELETE' | translate }}
+</button>
