--- a/src/app/user/pages/update-user-page/update-user-page.component.html
+++ b/src/app/user/pages/update-user-page/update-user-page.component.html
@@ -1,25 +1,32 @@
 <mat-progress-bar *ngIf="isPending | async" mode="indeterminate"></mat-progress-bar>
 <app-notification (confirm)="onErrorConfirm()"></app-notification>
 <form #ngForm="ngForm" [formGroup]="updateUserForm" (ngSubmit)="onSubmit()">
-  <h2>Update</h2>
+  <h2>{{ 'UPDATE-USER.TITLE' | translate }}</h2>
 
   <mat-form-field appearance="fill">
-    <mat-label>Name</mat-label>
+    <mat-label>{{ 'UPDATE-USER.INPUTS.NAME' | translate }}</mat-label>
     <input type="text" matInput formControlName="name" />
-    <mat-error *ngIf="name?.hasError('required')">Name is <strong>required</strong></mat-error>
+    <mat-error *ngIf="name?.hasError('required')"
+      >{{ 'UPDATE-USER.ERROR-TEXT.NAME' | translate
+      }}<strong>{{ 'UPDATE-USER.REQUIRED.NAME' | translate }}</strong></mat-error
+    >
   </mat-form-field>
 
   <mat-form-field appearance="fill">
-    <mat-label>Login</mat-label>
+    <mat-label>{{ 'UPDATE-USER.INPUTS.LOGIN' | translate }}</mat-label>
     <input type="text" matInput formControlName="login" />
-    <mat-error *ngIf="login?.hasError('required')">Login is <strong>required</strong></mat-error>
+    <mat-error *ngIf="login?.hasError('required')"
+      >{{ 'UPDATE-USER.ERROR-TEXT.LOGIN' | translate
+      }}<strong>{{ 'UPDATE-USER.REQUIRED.OTHER' | translate }}</strong></mat-error
+    >
   </mat-form-field>
 
   <mat-form-field appearance="fill">
-    <mat-label>Password</mat-label>
+    <mat-label>{{ 'UPDATE-USER.INPUTS.PASSWORD' | translate }}</mat-label>
     <input type="password" matInput formControlName="password" />
     <mat-error *ngIf="password?.hasError('required')">
-      Password is <strong>required</strong>
+      {{ 'UPDATE-USER.ERROR-TEXT.PASSWORD' | translate }}
+      <strong>{{ 'UPDATE-USER.REQUIRED.OTHER' | translate }}</strong>
     </mat-error>
   </mat-form-field>
 
@@ -28,6 +35,6 @@
     type="submit"
     [disabled]="ngForm.invalid || isSubmitting || updateUserForm.pristine"
   >
-    Update
+    {{ 'UPDATE-USER.BUTTON' | translate }}
   </button>
 </form>
