--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="main">
   <app-header></app-header>
+  <app-loading-bar></app-loading-bar>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
