--- a/src/app/core/pages/welcome-page/welcome-page.component.html
+++ b/src/app/core/pages/welcome-page/welcome-page.component.html
@@ -1,3 +1,12 @@
-<p>welcome-page works!</p>
+<div class="welcome-page">
+  <div class="welcome-page__container">
+    <div class="greeting">
+<h1>App Tracker</h1>
+      <p>Работайте над идеями в команде!
+      В приложении есть всё необходимое для совместной работы с задачами и проектами. </p>
+    </div>
 <button mat-stroked-button *ngIf="isUserAuth | async" (click)="signOut()">Logout</button>
 <button mat-stroked-button *ngIf="isUserAuth | async" (click)="deleteUser()">Delete</button>
+
+  </div>
+</div>
