--- a/src/app/shared/components/editable-title/editable-title.component.html
+++ b/src/app/shared/components/editable-title/editable-title.component.html
@@ -7,7 +7,7 @@
       <mat-icon>close</mat-icon>
     </button>
     <mat-form-field>
-      <input type="text" matInput formControlName="title" />
+      <input type="text" matInput formControlName="title">
     </mat-form-field>
   </form>
 </div>
