--- a/src/app/board/components/create-board/create-board.component.html
+++ b/src/app/board/components/create-board/create-board.component.html
@@ -6,13 +6,13 @@
   <form #ngForm="ngForm" [formGroup]="createBoardForm">
     <mat-form-field appearance="fill">
       <mat-label>Title</mat-label>
-      <input type="text" matInput formControlName="title" />
+      <input type="text" matInput formControlName="title">
       <mat-error *ngIf="title?.hasError('required')">Title is <strong>required</strong></mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>Description</mat-label>
-      <input type="text" matInput formControlName="description" />
+      <input type="text" matInput formControlName="description">
       <mat-error *ngIf="description?.hasError('required')">
         Description is <strong>required</strong>
       </mat-error>
