--- a/src/app/board/pages/search-tasks-page/search-tasks-page.component.html
+++ b/src/app/board/pages/search-tasks-page/search-tasks-page.component.html
@@ -8,7 +8,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field>
-    <input type="text" matInput formControlName="query" />
+    <input type="text" matInput formControlName="query">
   </mat-form-field>
 </form>
 <div *ngIf="tasks$ | async as tasks">
