--- a/src/app/board/pages/boards-page/boards-page.component.html
+++ b/src/app/board/pages/boards-page/boards-page.component.html
@@ -1,7 +1,18 @@
-<button mat-raised-button (click)="createBoard()">Create board</button>
-<div class="board" *ngFor="let board of boards$ | async">
-  <a [routerLink]="['/boards', board.id]">{{ board.id }} | {{ board.title }}</a>
-  <button mat-raised-button type="button" (click)="deleteBoard(board.id, board.title)">
-    Delete
-  </button>
+<div class="page-container">
+  <div class="boards">
+    <mat-card class="board" *ngFor="let board of boards$ | async">
+      <mat-card-title>{{ board.title }}</mat-card-title>
+      <mat-card-content>
+        <p>{{ board.description }}</p>
+      </mat-card-content>
+      <mat-card-actions class="actions">
+        <button mat-stroked-button color="warn" (click)="deleteBoard(board.id, board.title)">
+          Delete
+        </button>
+        <button [routerLink]="['/boards', board.id]" mat-stroked-button color="primary">
+          Open
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 </div>
