refactor: change styles for forms

--- a/src/app/auth/pages/sign-in-page/sign-in-page.component.html
+++ b/src/app/auth/pages/sign-in-page/sign-in-page.component.html
@@ -6,7 +6,7 @@
       <mat-card-title>
         <h2>{{ 'LOGIN-PAGE.TITLE' | translate }}</h2>
       </mat-card-title>
-      <mat-card-content>
+      <mat-card-content class="form-content">
         <mat-form-field appearance="fill">
           <mat-label>{{ 'LOGIN-PAGE.INPUTS.LOGIN' | translate }}</mat-label>
           <input type="text" matInput formControlName="login" />
