--- a/src/app/auth/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/auth/pages/sign-up-page/sign-up-page.component.html
@@ -6,7 +6,7 @@
       <mat-card-title>
         <h2>{{ 'SIGN-UP-PAGE.TITLE' | translate }}</h2>
       </mat-card-title>
-      <mat-card-content>
+      <mat-card-content class="form-content">
         <mat-form-field appearance="fill">
           <mat-label>{{ 'SIGN-UP-PAGE.INPUTS.NAME' | translate }}</mat-label>
           <input type="text" matInput formControlName="name" />
