--- a/src/app/user/pages/update-user-page/update-user-page.component.html
+++ b/src/app/user/pages/update-user-page/update-user-page.component.html
@@ -7,7 +7,7 @@
         <h2>{{ 'UPDATE-USER.TITLE' | translate }}</h2>
       </mat-card-title>
 
-      <mat-card-content>
+      <mat-card-content class="form-content">
         <mat-form-field appearance="fill">
           <mat-label>{{ 'UPDATE-USER.INPUTS.NAME' | translate }}</mat-label>
           <input type="text" matInput formControlName="name" />
