--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,11 +26,6 @@ body {
   padding: 1.5rem;
 }
 
-mat-form-field {
-  width: 100%;
-  margin-bottom: 0.5rem;
-}
-
 .form {
   &-container {
     display: flex;
@@ -40,5 +35,12 @@ mat-form-field {
   &-card {
     max-width: 450px;
     flex-grow: 1;
+  }
+
+  &-content {
+    mat-form-field {
+      width: 100%;
+      margin-bottom: 0.5rem;
+    }
   }
 }
