--- a/src/app/board/components/create-column/create-column.component.html
+++ b/src/app/board/components/create-column/create-column.component.html
@@ -3,7 +3,7 @@
     <mat-icon class="icon" aria-hidden="false" aria-label="add circle icon">add_circle</mat-icon>
     Create Column
   </h1>
-  <div mat-dialog-content>
+  <div mat-dialog-content class="form-content">
     <form #ngForm="ngForm" [formGroup]="createColumnForm">
       <mat-form-field appearance="fill">
         <mat-label>Title</mat-label>
