feat: add translations

--- a/src/app/board/components/create-board/create-board.component.html
+++ b/src/app/board/components/create-board/create-board.component.html
@@ -1,27 +1,33 @@
 <h1 class="title" mat-dialog-title>
   <mat-icon class="icon" aria-hidden="false" aria-label="add circle icon">add_circle</mat-icon>
-  Create Board
+  {{ 'CREATE-BOARD.TITLE' | translate }}
 </h1>
 <div mat-dialog-content>
   <form #ngForm="ngForm" [formGroup]="createBoardForm">
     <mat-form-field appearance="fill">
-      <mat-label>Title</mat-label>
+      <mat-label>{{ 'CREATE-BOARD.FIELDS-TITLES.TITLE' | translate }}</mat-label>
       <input type="text" matInput formControlName="title" />
-      <mat-error *ngIf="title?.hasError('required')">Title is <strong>required</strong></mat-error>
+      <mat-error *ngIf="title?.hasError('required')"
+        >{{ 'CREATE-BOARD.ERRORS-TEXT.TITLE' | translate
+        }}<strong>{{ 'CREATE-BOARD.REQUIRED' | translate }}</strong></mat-error
+      >
     </mat-form-field>
 
     <mat-form-field appearance="fill">
-      <mat-label>Description</mat-label>
+      <mat-label>{{ 'CREATE-BOARD.FIELDS-TITLES.DESCRIPTION' | translate }}</mat-label>
       <input type="text" matInput formControlName="description" />
       <mat-error *ngIf="description?.hasError('required')">
-        Description is <strong>required</strong>
+        {{ 'CREATE-BOARD.ERRORS-TEXT.DESCRIPTION' | translate
+        }}<strong>{{ 'CREATE-BOARD.REQUIRED' | translate }}</strong>
       </mat-error>
     </mat-form-field>
   </form>
 </div>
 <div class="actions" mat-dialog-actions>
   <button mat-flat-button color="primary" (click)="onCreateClick()" [disabled]="ngForm.invalid">
-    Create
+    {{ 'CREATE-BOARD.BUTTONS.CREATE' | translate }}
   </button>
-  <button mat-button (click)="onCancelClick()">Cancel</button>
+  <button mat-button (click)="onCancelClick()">
+    {{ 'CREATE-BOARD.BUTTONS.CANCEL' | translate }}
+  </button>
 </div>
