--- a/src/app/board/pages/boards-page/boards-page.component.html
+++ b/src/app/board/pages/boards-page/boards-page.component.html
@@ -1,8 +1,10 @@
 <mat-progress-bar *ngIf="isPending | async" mode="indeterminate"></mat-progress-bar>
-<button mat-raised-button (click)="createBoard()">Create board</button>
+<button mat-raised-button (click)="createBoard()">
+  {{ 'BOARDS-PAGE.BUTTONS.CREATE' | translate }}
+</button>
 <div class="board" *ngFor="let board of boards$ | async">
   <a [routerLink]="['/boards', board.id]">{{ board.id }} | {{ board.title }}</a>
   <button mat-raised-button type="button" (click)="deleteBoard(board.id, board.title)">
-    Delete
+    {{ 'BOARDS-PAGE.BUTTONS.DELETE' | translate }}
   </button>
 </div>
