--- a/src/app/shared/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.html
@@ -1,14 +1,17 @@
 <h1 class="title" mat-dialog-title>
   <mat-icon class="icon" aria-hidden="false" aria-label="warning icon">warning</mat-icon>
-  Delete {{ data.target }}?
+  {{ 'DELETE-DIALOG.DELETE' | translate: param }}
 </h1>
 <div mat-dialog-content>
   <p>
-    You're about to permanently delete this {{ data.type }} and all of its data. If you're not sure,
-    you can cancel this action.
+    {{ 'DELETE-DIALOG.TEXT' | translate: param }}
   </p>
 </div>
 <div class="actions" mat-dialog-actions>
-  <button mat-flat-button color="warn" (click)="onDeleteClick()">Delete</button>
-  <button mat-button (click)="onCancelClick()" cdkFocusInitial>Cancel</button>
+  <button mat-flat-button color="warn" (click)="onDeleteClick()">
+    {{ 'DELETE-DIALOG.BUTTONS.DELETE' | translate }}
+  </button>
+  <button mat-button (click)="onCancelClick()" cdkFocusInitial>
+    {{ 'DELETE-DIALOG.BUTTONS.CANCEL' | translate: param }}
+  </button>
 </div>
