--- a/src/app/core/pages/welcome-page/welcome-page.component.scss
+++ b/src/app/core/pages/welcome-page/welcome-page.component.scss
@@ -1,27 +1,73 @@
 $font: Roboto, "Helvetica Neue", sans-serif;
 $primary: #3f51b5;
+@import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #27b6a7 50%, $primary 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
+.content {
+  background-color:rgba(255,255,255,.8);
+  border-radius:.25em;
+  box-shadow:0 0 .25em rgba(0,0,0,.25);
+  box-sizing:border-box;
+  left:50%;
+  padding:10vmin;
+  position:fixed;
+  text-align:center;
+  top:50%;
+  width: 60%;
+  transform:translate(-50%, -50%);
+}
+
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
+}
 .welcome-page {
   display: flex;
   &__container {
     margin: 0 auto;
     max-width: 1440px;
     font-family: $font;
-    min-height: 80vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     .greeting {
-      height: 30vh;
+      height: 22vh;
       display: flex;
+      background-color: inherit;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: space-evenly;
       h1 {
         color: $primary;
         font-weight: bold;
         font-size: 4rem;
         letter-spacing: 3px;
         line-height: 4rem;
+        font-family:monospace;
       }
       p {
         margin: 0;
@@ -45,5 +91,34 @@ $primary: #3f51b5;
         background: linear-gradient(90deg, $primary 0%, $primary 35%, #a14a8b 100%);
       }
     }
+    .functions {
+      display: flex;
+      .functions-management, .functions-settings {
+        display: flex;
+        width: 50%;
+        align-items: center;
+        ul {
+          padding: 0;
+          li {
+            font-family: $font;
+            list-style-type: none;
+            color: $primary;
+            font-size: 18px;
+            line-height: 22px;
+          }
+        }
+      }
+      .icon {
+        height: 100px;
+        width: auto;
+      }
+    }
   }
+}
+.greeting-line {
+  margin: 20px 0;
+  padding: 0;
+  height: 0;
+  border: none;
+  border-top: 1px solid $primary;
 }
