--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -3,7 +3,7 @@
 }
 
 .footer {
-  padding: 1% 4%;
+  padding: 5px 20px;
   justify-content: space-between;
   align-items: center;
   &__authors {
@@ -20,7 +20,7 @@
       transition: all 0.3s;
       width: fit-content;
       &:hover {
-        filter: invert(1);
+        text-decoration: underline;
       }
     }
   }
@@ -29,7 +29,7 @@
   }
   &__logo {
     width: 33%;
-    height: 100%;
+    height: 84%;
     background-image: url(../../../../assets/svg/logo.svg);
     background-size: contain;
     background-repeat: no-repeat;
