--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding: 1% 4%;
+  padding: 5px 20px;
   justify-content: space-between;
   align-items: center;
   &__authors {
@@ -16,7 +16,7 @@
       transition: all 0.3s;
       width: fit-content;
       &:hover {
-        filter: invert(1);
+        text-decoration: underline;
       }
     }
   }
@@ -25,7 +25,7 @@
   }
   &__logo {
     width: 33%;
-    height: 100%;
+    height: 84%;
     background-image: url(../../../../assets/svg/logo.svg);
     background-size: contain;
     background-repeat: no-repeat;
