--- a/src/app/core/pages/welcome-page/welcome-page.component.html
+++ b/src/app/core/pages/welcome-page/welcome-page.component.html
@@ -25,6 +25,6 @@
           </ul>
         </div>
       </div>
-
+      <button mat-raised-button color="primary" class="about">О команде</button>
   </div>
 </div>
