--- a/src/app/core/pages/welcome-page/welcome-page.component.scss
+++ b/src/app/core/pages/welcome-page/welcome-page.component.scss
@@ -47,6 +47,7 @@ $primary: #3f51b5;
 }
 .welcome-page {
   display: flex;
+  align-items: center;
   &__container {
     margin: 0 auto;
     max-width: 1440px;
@@ -99,6 +100,7 @@ $primary: #3f51b5;
         align-items: center;
         ul {
           padding: 0;
+          text-align: left;
           li {
             font-family: $font;
             list-style-type: none;
@@ -112,6 +114,10 @@ $primary: #3f51b5;
         height: 100px;
         width: auto;
       }
+
+    }
+    .about {
+      width: 250px;
     }
   }
 }
