--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -6,14 +6,13 @@
   padding: 5px 20px;
   justify-content: space-between;
   align-items: center;
+  font-size: 1rem;
   &__authors {
-    width: 33%;
     height: 100%;
     display: flex;
+    gap: 1.5rem;
     justify-content: space-between;
-    flex-direction: column;
-    font-size: 0.8rem;
-    line-height: 0.8rem;
+    align-items: center;
     &__link {
       color: #ffffff;
       text-decoration: none;
@@ -24,11 +23,8 @@
       }
     }
   }
-  &__year {
-    font-size: 1.5rem;
-  }
   &__logo {
-    width: 33%;
+    width: 7rem;
     height: 84%;
     background-image: url(../../../../assets/svg/logo.svg);
     background-size: contain;
@@ -36,8 +32,10 @@
     background-position-y: center;
     background-position-x: right;
     transition: all 0.3s;
-    &:hover {
-      transform: scale(1.1);
-    }
+  }
+}
+@media (max-width: 680px) {
+  .footer__authors {
+    display: none;
   }
 }
