fix: fix styles

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,11 +1,13 @@
 <footer>
-  <mat-toolbar class="footer" color="primary">
-    <span class="footer__year">App Tracker 2022</span>
-    <div class="footer__authors">
-      <a href="https://github.com/gapeev" class="footer__authors__link">gapeev</a>
-      <a href="https://github.com/Anesthesia92" class="footer__authors__link">Anesthesia92</a>
-      <a href="https://github.com/Valeria310" class="footer__authors__link">Valeria310</a>
+  <mat-toolbar color="primary">
+    <div class="page-container footer">
+      <span class="footer__year">App Tracker 2022</span>
+      <div class="footer__authors">
+        <a href="https://github.com/gapeev" class="footer__authors__link">gapeev</a>
+        <a href="https://github.com/Anesthesia92" class="footer__authors__link">Anesthesia92</a>
+        <a href="https://github.com/Valeria310" class="footer__authors__link">Valeria310</a>
+      </div>
+      <a href="https://rs.school/angular/" class="footer__logo"></a>
     </div>
-    <a href="https://rs.school/angular/" class="footer__logo"></a>
   </mat-toolbar>
 </footer>
