--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -3,10 +3,13 @@
 }
 
 .footer {
-  padding: 5px 20px;
+  width: 1200px;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   font-size: 1rem;
+  padding: 1rem;
+  height: 100%;
   &__authors {
     height: 100%;
     display: flex;
