add adaptive styles

--- a/src/app/core/pages/welcome-page/welcome-page.component.html
+++ b/src/app/core/pages/welcome-page/welcome-page.component.html
@@ -4,24 +4,25 @@
 <div class="content">
     <div class="welcome-page__container" id="welcome-page">
       <mat-toolbar class="greeting">
-        <h1>App Tracker</h1>
-        <p>Планируйте проекты и управляйте задачами!</p>
+        <h1 class="greeting-title">App Tracker</h1>
+        <p class="greeting-text">Планируйте проекты и управляйте задачами!</p>
     </mat-toolbar>
       <hr class="greeting-line">
       <div class="functions">
         <div class="functions-management">
-<img src="../../../../assets/png/5885678.png" alt="check-list" class="icon">
-          <ul>
+<img src="../../../../assets/png/tasks.png" alt="check-list" class="icon">
+          <ul class="list">
             <li>Организуйте работу своего коллектива в общем пространстве.</li>
             <li>Добавляйте колонки, задачи и виртуиальные доски.</li>
             <li>Ставьте и контролируйте задачи любой сложности.</li>
           </ul>
         </div>
         <div class="functions-settings">
-          <img src="../../../../assets/png/2857480.png" alt="settings" class="icon">
-          <ul>
+          <img src="../../../../assets/png/settings.png" alt="settings" class="icon">
+          <ul class="list">
             <li>Выстраивайте работу над проектом по любой удобной вам методике.</li>
-            <li>Управляйте зависящими друг от друга, пересекающимися и непредвиденными задачами, а также создавайте реалистичные планы. </li>
+            <li>Управляйте зависящими друг от друга, пересекающимися и непредвиденными задачами,
+              а также создавайте реалистичные планы. </li>
           </ul>
         </div>
       </div>
