--- a/src/app/core/pages/welcome-page/welcome-page.component.scss
+++ b/src/app/core/pages/welcome-page/welcome-page.component.scss
@@ -47,8 +47,8 @@ $primary: #3f51b5;
 }
 .welcome-page {
   display: flex;
-  align-items: center;
   &__container {
+    align-items: center;
     margin: 0 auto;
     max-width: 1440px;
     font-family: $font;
@@ -77,6 +77,7 @@ $primary: #3f51b5;
         line-height: 2rem;
         color: $primary;
         display: table;
+        white-space: normal;
       }
       .registration-button {
         background: $primary;
@@ -99,8 +100,8 @@ $primary: #3f51b5;
         width: 50%;
         align-items: center;
         ul {
-          padding: 0;
           text-align: left;
+          padding: 0 0 0 10px;
           li {
             font-family: $font;
             list-style-type: none;
@@ -117,7 +118,9 @@ $primary: #3f51b5;
 
     }
     .about {
-      width: 250px;
+      width: 200px;
+      font-size: 18px;
+      font-family: $font;
     }
   }
 }
@@ -126,5 +129,35 @@ $primary: #3f51b5;
   padding: 0;
   height: 0;
   border: none;
+  width: 100%;
   border-top: 1px solid $primary;
+}
+
+@media (max-width: 790px) {
+  .content {
+    width: 90%;
+  }
+  .greeting-title {
+      font-size: 2.5rem !important;
+  }
+  .greeting-text {
+    width: inherit;
+    display: flex;
+    font-size: 1.2rem !important;
+  }
+  .icon {
+    height: 40px!important;
+  }
+  .list {
+    padding: 0 0 0 5px!important;
+    li {
+      font-size: 16px!important;
+    }
+  }
+  .functions {
+    flex-direction: column;
+  }
+  .functions-management, .functions-settings {
+    width: 100%!important;
+  }
 }
